@@ -1,3 +1,10 @@
+2010-11-04  Maciej W. Rozycki  <macro@codesourcery.com>
+
+	PR ld/10144
+	* elfxx-mips.c (_bfd_mips_elf_check_relocs)
+	[R_MIPS_32, R_MIPS_REL32, R_MIPS_64]: Ignore relocs from
+	SEC_DEBUGGING sections.
+
 2010-11-04  Tristan Gingold  <gingold@adacore.com>
 
 	* vms-lib.c (vms_write_index): Fix thinko: reverse the loop.
